# llamaindex-fastapi

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/configs/: __init__.py  env_vars.py
